--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  copy_with_extension_gen: ^5.0.2
+  http: ^0.13.6
+  dio: ^5.1.1
+  
 
 dev_dependencies:
   flutter_test:
